# Parametric_Forge

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CLAUDE.MD  CLAUDE.md  COLOR_MAPPING.md  MCP_QUICK_REFERENCE.txt  MCP_SERVERS_AUDIT.md  README.md  biome.json  debug-sketchybar-env.sh  doppler.yaml  flake.nix  karabiner.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: docs-researcher.md  prose-reviewer.md  reviewer-harvest.md  tool-config-builder.md  tool-config-refactor.md  tool-researcher.md
.claude/commands/: coderabbit-review.md  config-check.md  tool-config.md
.claude/hooks/: agent-attention.sh  load-skill-index.py  setup-env.sh  webhook-emit.py
.claude/lsp-marketplace/.claude-plugin/: marketplace.json
.claude/lsp-marketplace/bash-lsp/: .lsp.json
.claude/lsp-marketplace/lua-lsp/: .lsp.json
.claude/scripts/: bootstrap-cli-tools.sh
.claude/skills/agy/: SKILL.md
.claude/workflows/: docgen-pass.js  dossier-wave-g2.js  dossier-wave-t3.js  dossier-wave-t4.js  dossier-wave.js  estate.js  scout-wave.js  thread-review.js
.greptile/: config.json  files.json  rules.md
.kiro/steering/: code-quality.md  formatting-standards.md  product.md  spec-research.md  structure.md  tech.md
.macroscope/: ignore.md
00.system/: cachix.nix  default.nix  environment.nix  fonts.nix  nix.nix
00.system/darwin/: activation.nix  applications.nix  darwin.nix  default.nix  homebrew.nix
00.system/nixos/: containers.nix  default.nix
01.home/: activation.nix  default.nix  environment.nix  exclusions.nix  file-management.nix  fonts.nix  tokens.nix  xdg.nix
01.home/01.packages/: ai-tools.nix  core.nix  default.nix  dev-tools.nix  devops.nix  git-tools.nix  lua-tools.nix  macos-tools.nix  media-tools.nix  nix-tools.nix  node-tools.nix  python-tools.nix  rust-tools.nix  sketchybar.nix  sysadmin.nix
01.home/darwin/: activation.nix  default.nix
01.home/nixos/: default.nix
DOSSIER/: README.md
DOSSIER/g1-attention-receipts/: capabilities.md  ecosystem.md  ideas.md
DOSSIER/g2-design-system/: capabilities.md  ecosystem.md  ideas.md
DOSSIER/g3-vscode-flagship/: capabilities.md  ecosystem.md  ideas.md
DOSSIER/g4-session-fabric/: capabilities.md  ecosystem.md  ideas.md
DOSSIER/g5-language-harness/: capabilities.md  ecosystem.md  ideas.md
DOSSIER/g6-cross-app/: integration.md  novel.md
Z_DEPRECATED/items/: packages.sh  system-monitor.sh  wifi.sh
Z_DEPRECATED/plugins/: notifications.sh  packages.sh  wifi.sh
checks/: forge-provision.bats  rasm-provision.bats
devshells/: lua.nix  python.nix  rust.nix
docs/: FRONTIER.md  macos_tiling_hotkeys_automation_report.md
docs/atlas/: README.md  interconnection.md  platform-facts.md  rails-and-contracts.md  scars.md  secrets-and-services.md
docs/laws/: README.md  agents.md  design.md  kernels.md  landing.md  modules.md  patterns.md  projections.md  scars.md  topology.md
docs/standards/: design-doctrine.md  formatting.md  information-structure.md  nix-doctrine.md  style-guide.md
flake/: checks.nix  default.nix  devshells.nix  formatting.nix  packages.nix  systems.nix
flake-modules/: nixpkgs.nix  packages.nix  qa.nix  tooling.nix
flake-modules/qa/: catalog.nix  contracts.nix  provisioning.nix  static.nix
hosts/: context.nix  default.nix
hosts/darwin/: default.nix
hosts/nixos/: default.nix
interface/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
interface/src/: REFACTOR_BLUEPRINT.md  git.rs  main.rs
interface/src/00.DEPRECATED/: app.rs  config.rs  main.rs  nix.rs  persistence.rs  system.rs
interface/src/00.DEPRECATED/components/: mod.rs  registry.rs  router.rs
interface/src/00.DEPRECATED/core/: action.rs  event.rs  mod.rs  state.rs
interface/src/00.DEPRECATED/layouts/: builder.rs  grid.rs  mod.rs  tabs.rs
interface/src/00.DEPRECATED/runtime/: executor.rs  mod.rs  terminal.rs
interface/src/00.DEPRECATED/widgets/: breadcrumb.rs  form.rs  list.rs  menu.rs  mod.rs  panel.rs  popup.rs  progress.rs  scrollview.rs  status_bar.rs  table.rs  text_input.rs  toolbar.rs  tree.rs  validation.rs
interface/src/features/: nomad_features.md  popup_features.md  text_input_features.md  tui-menu_features.md  tui-scrollview_features.md  tui-widget-list_features.md
interface/src/functionality/: mod.rs
interface/src/functionality/core/: events.rs  feedback.rs  geometry.rs  mod.rs  modes.rs  state.rs  tabs.rs
interface/src/functionality/input/: clipboard.rs  history.rs  masking.rs  mod.rs  text.rs  validation.rs
interface/src/functionality/layout/: constraints.rs  mod.rs  positioning.rs  responsive.rs
interface/src/functionality/navigation/: behaviors.rs  core.rs  mod.rs  nav.rs  selection.rs  word.rs
interface/src/functionality/visual/: animation.rs  borders.rs  effects.rs  icons.rs  indicators.rs  mod.rs  spaces.rs  theming.rs  traits.rs
lib/: 1password-helpers.nix  alerter.nix  build.nix  config-defaults.nix  default.nix  detection.nix  devshell-helpers.nix  exclusion-filters.nix  font-patcher.nix  git-status.nix  launchd.nix
lib/.claude/: settings.local.json
modules/: configuration.nix  default.nix  secrets.nix  style.nix
modules/common/: default.nix  fonts-catalog.nix  nix.nix  theme.nix  toolchain-env.nix  users.nix
modules/darwin/: default.nix  environment.nix  fonts.nix
modules/home/: default.nix  fonts.nix  theme.nix  xdg.nix
modules/nixos/: default.nix  disko.nix
overlays/: default.nix  manifest.nix
overlays/duckdb/: default.nix
overlays/energyplus/: default.nix
overlays/forge-provision/: README.md  default.nix  forge-provision.sh
overlays/nodejs-bin/: default.nix
overlays/openstudio/: default.nix
overlays/pnpm/: default.nix
overlays/rasm-provision/: default.nix  rasm-provision.sh
overlays/sqlean/: default.nix
overlays/sqlite-forge/: default.nix
overlays/yazi/: default.nix
overlays/zesh/: default.nix
services/: README.md  driver.ts  estate.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  topology.ts  tsconfig.json
(+956 files in other folders)
